--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
 	</script>
-    <script type = "text/javascript" src = "kоlya11.js"></script>
-    <script type = "text/javascript" src = "server.js"></script>
+    <script type = "text/javascript" src = "kolya11.js"></script>
 
 </body>
 </html>
