change backround of initial screen

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Game&?</title>
 	<style>
         body {
-            background: url(титульник.jpg);
+            background: url(титульник_1.jpg);
             background-size:100% 142%;
             font-size: 30pt;
         }
