added DOM functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </section>
     <section class="screen end-game-screen">
         <!-- тут набранные очки и кнопка играть снова -->
+        <h1>Вы набрали <span class="score"></span> очков!</h1>
     </section>
     <section class="screen main-game-screen show">
         <!-- основной игровой процесс -->
@@ -29,9 +30,9 @@
             </div>
             <div class="row">
                 <div class="hp-block-wrapper">
-                    <div class="hp" id="hp1"></div>
-                    <div class="hp" id="hp2"></div>
-                    <div class="hp" id="hp3"></div>
+                    <div class="hp"></div>
+                    <div class="hp"></div>
+                    <div class="hp"></div>
                 </div>
                 <div class="score-block-wrapper">
                     <span id="score">0</span>
