--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     </section>
     <script type="text/javascript" src="static/ext/jquery.3.3.1.js"></script>
     <!-- <script type="text/javascript" src="static/ext/jquery.3.3.1.min.js"></script> -->
-    <script type="text/javascript" src="static/js/script.js"></script>
+    <script type="text/javascript" src="static/js/script.new.js"></script>
 </body>
 </html>
