--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
         </div>
         <section class="screen instruction-window">
             <p>
-                Примеры решаются на время. На решение одного примера даётся 5 секунд. На начало каждой игры у игрока есть 3 жизни. За каждый правильный ответ игрок получает очки. За каждую ошибку у него снимается одна жизнь. Когда не останется ни одной жизни, игра прекратится, и на экране появятся набранные очки.
+                Примеры решаются на время. На решение одного примера даётся 5 секунд. На начало каждой игры у игрока есть 3 жизни. За каждый правильный ответ игрок получает очки. За каждую ошибку у него снимается одна жизнь.  Когда не останется ни одной жизни, игра прекратится, и на экране появятся набранные очки.
             </p>
         </section>
     </section>
     <section class="screen end-game-screen">
         <!-- тут набранные очки и кнопка играть снова -->
-        <h1>Вы набрали <span class="score"></span> очков!</h1>
+        <h1 style="margin-top: 100px">Вы набрали <span class="score"></span> очков!</h1>
+        <img class = "replay_button" src="static/images/replay.png"
+        onclick="init_game()"></img>
     </section>
     <section class="screen main-game-screen">
         <!-- основной игровой процесс -->
