--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+    <meta name='viewport' content='width=device-width,
+    initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no'/>
+    <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta property="og:title" content='Игра "Арифметика"' />
     <meta property="og:image" content="https://nikolaymagarin.github.io/static/images/boy-og.jpg"/>
     <meta name="author" content="Николай Магарин">
