--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Николай Магарин">
     <meta name="description" content="Тебе предстоит решать примеры на время, чем больше успеешь решить, тем ты круче!">
 	<title>Игра "Арифметика"</title>
-    <link rel="stylesheet" href="/static/css/common.css"/>
-    <link rel="stylesheet" href="/static/css/modal.css"/>
-    <link rel="stylesheet" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="/static/css/common.css?v=1"/>
+    <link rel="stylesheet" href="/static/css/modal.css?v=1"/>
+    <link rel="stylesheet" href="/static/css/style.css?v=1"/>
     <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="utf-8"></script>
 </head>
 <body>
@@ -98,7 +98,7 @@
     </section>
     <script type="text/javascript" src="static/ext/jquery.3.3.1.js"></script>
     <!-- <script type="text/javascript" src="static/ext/jquery.3.3.1.min.js"></script> -->
-    <script type="text/javascript" src="static/js/script.new.js"></script>
-    <script type="text/javascript" src="static/js/modal.js"></script>
+    <script type="text/javascript" src="static/js/script.new.js?v=1"></script>
+    <script type="text/javascript" src="static/js/modal.js?v=1"></script>
 </body>
 </html>
