added db integration

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <button id="instructions-btn" class="instruction_button">
                     Инструкция
                 </button>
-                <button class="instruction_button">
-                    Список лидеров
-                </button>
+                <a href="/ratings.html" class="instruction_button">
+                    Рейтинг игроков
+                </a>
                 <button class="instruction_button login-vk-button hide" onclick="VK.Auth.login(login_callback)">
                     Войти через ВК
                 </button>
@@ -121,7 +121,7 @@
     </section>
     <script type="text/javascript" src="static/ext/jquery.3.3.1.js"></script>
     <!-- <script type="text/javascript" src="static/ext/jquery.3.3.1.min.js"></script> -->
-    <script type="text/javascript" src="static/js/script.new.js?v=1"></script>
+    <script type="text/javascript" src="static/js/script.js?v=1"></script>
     <script type="text/javascript" src="static/js/modal.js?v=1"></script>
     <script type="text/javascript" src="/static/js/database.js"></script>
     <script>
