--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="author" content="Николай Магарин">
     <meta name="description" content="Тебе предстоит решать примеры на время, чем больше успеешь решить, тем ты круче!">
 	<title>Игра "Арифметика"</title>
-    <link rel="stylesheet" href="/static/css/common.css?v=1"/>
-    <link rel="stylesheet" href="/static/css/modal.css?v=1"/>
-    <link rel="stylesheet" href="/static/css/style.css?v=1"/>
+    <link rel="stylesheet" href="/static/css/common.css?v=2"/>
+    <link rel="stylesheet" href="/static/css/modal.css?v=2"/>
+    <link rel="stylesheet" href="/static/css/style.css?v=2"/>
     <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="utf-8"></script>
     <script src="https://vk.com/js/api/openapi.js?160" type="text/javascript"></script>
     <script src="/static/js/vk_api.js" type="text/javascript"></script>
@@ -121,9 +121,9 @@
     </section>
     <script type="text/javascript" src="static/ext/jquery.3.3.1.js"></script>
     <!-- <script type="text/javascript" src="static/ext/jquery.3.3.1.min.js"></script> -->
-    <script type="text/javascript" src="static/js/script.js?v=1"></script>
-    <script type="text/javascript" src="static/js/modal.js?v=1"></script>
-    <script type="text/javascript" src="/static/js/database.js"></script>
+    <script type="text/javascript" src="static/js/script.js?v=2"></script>
+    <script type="text/javascript" src="static/js/modal.js?v=2"></script>
+    <script type="text/javascript" src="/static/js/database.js?v=2"></script>
     <script>
         get_user_status()
     </script>
