--- a/ratings.html
+++ b/ratings.html
@@ -27,8 +27,8 @@
       });
     </script>
     <script type="text/javascript" src="static/ext/jquery.3.3.1.js"></script>
-    <script type="text/javascript" src="static/js/script.js?v=1"></script>
-    <script type="text/javascript" src="/static/js/database.js"></script>
+    <script type="text/javascript" src="static/js/script.js?v=2"></script>
+    <script type="text/javascript" src="/static/js/database.js?v=2"></script>
     <script>
         get_user_status()
         get_games()
