--- a/ratings.html
+++ b/ratings.html
@@ -9,6 +9,9 @@
     <meta property="og:image" content="https://nikolaymagarin.github.io/static/images/boy-og.jpg"/>
     <meta name="author" content="Николай Магарин">
     <meta name="description" content="Тебе предстоит решать примеры на время, чем больше успеешь решить, тем ты круче!">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Рейтинг игроков - Игра "Арифметика"</title>
     <link rel="stylesheet" href="/static/css/common.css?v=1"/>
     <link rel="stylesheet" href="/static/css/modal.css?v=1"/>
