--- a/ratings.html
+++ b/ratings.html
@@ -38,7 +38,7 @@
     </script>
     <div class="header">
         <a href="/" class="go-back">
-            На главную
+            <img src="/static/images/home-icon-white.png" height="30px" alt=""/>
         </a>
         <div class="profile-info">
             <img src="/static/images/anonymous.png" alt="" class="profile-avatar"/>
