--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
     <script type="text/javascript" src="static/js/script.js?v=4"></script>
     <script type="text/javascript" src="static/js/modal.js?v=2"></script>
     <script type="text/javascript" src="/static/js/database.js?v=3"></script>
+    <script type="text/javascript" src="/static/js/game.js?v=4"></script>
     <script>
         get_user_status()
     </script>
