added cheating mode and minor fixes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <img src="/static/images/anonymous.png" alt="" class="profile-avatar"/>
             <div>
                 <div class="profile-name">Аноним</div>
-                <div class="profile-logout" onclick="logout()">выйти</div>
+                <div class="profile-logout hide" onclick="logout()">выйти</div>
             </div>
         </div>
         <h1 class="main-title">Арифметика</h1>
