moved arifmetika game to own dir

--- a/arifmetika/index.html
+++ b/arifmetika/index.html
@@ -6,19 +6,19 @@
     initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no'/>
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta property="og:title" content='Игра "Арифметика"' />
-    <meta property="og:image" content="https://nikolaymagarin.github.io/static/images/boy-og.jpg"/>
+    <meta property="og:image" content="https://nikolaymagarin.github.io/arifmetika/static/images/boy-og.jpg"/>
     <meta name="author" content="Николай Магарин">
     <meta name="description" content="Тебе предстоит решать примеры на время, чем больше успеешь решить, тем ты круче!">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
 	<title>Игра "Арифметика"</title>
-    <link rel="stylesheet" href="/static/css/common.css?v=2"/>
-    <link rel="stylesheet" href="/static/css/modal.css?v=2"/>
-    <link rel="stylesheet" href="/static/css/style.css?v=2"/>
+    <link rel="stylesheet" href="static/css/common.css?v=2"/>
+    <link rel="stylesheet" href="static/css/modal.css?v=2"/>
+    <link rel="stylesheet" href="static/css/style.css?v=2"/>
     <script type="text/javascript" src="https://vk.com/js/api/share.js?93" charset="utf-8"></script>
     <script src="https://vk.com/js/api/openapi.js?160" type="text/javascript"></script>
-    <script src="/static/js/vk_api.js" type="text/javascript"></script>
+    <script src="static/js/vk_api.js" type="text/javascript"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.2/firebase-firestore.js"></script>
     
@@ -34,14 +34,14 @@
     </section>
     <section class="screen start-screen show">
         <div class="profile-info">
-            <img src="/static/images/anonymous.png" alt="" class="profile-avatar"/>
+            <img src="static/images/anonymous.png" alt="" class="profile-avatar"/>
             <div>
                 <div class="profile-name">Аноним</div>
                 <div class="profile-logout" onclick="logout()">выйти</div>
             </div>
         </div>
         <h1 class="main-title">Арифметика</h1>
-        <img src="/static/images/boy.png" alt="" class="boy">
+        <img src="static/images/boy.png" alt="" class="boy">
         <div>
             <!-- <button class="start_button" onclick="init_game()"></button> -->
             <div class="buttons-wrapper buttons-wrapper-column">
@@ -89,7 +89,7 @@
             </button>
         </div>
         
-        <img src="/static/images/boy.png" alt="" class="boy">
+        <img src="static/images/boy.png" alt="" class="boy">
     </section>
     <section class="screen main-game-screen">
         <!-- основной игровой процесс -->
@@ -126,7 +126,7 @@
     <!-- <script type="text/javascript" src="static/ext/jquery.3.3.1.min.js"></script> -->
     <script type="text/javascript" src="static/js/script.js?v=4"></script>
     <script type="text/javascript" src="static/js/modal.js?v=2"></script>
-    <script type="text/javascript" src="/static/js/database.js?v=3"></script>
+    <script type="text/javascript" src="static/js/database.js?v=3"></script>
     <script>
         get_user_status()
     </script>
