--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Nikolay Magarin - Projects</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class='col-12 my-5 text-center'>
                 <h1>Projects</h1>
