--- a/arifmetika/index.html
+++ b/arifmetika/index.html
@@ -51,7 +51,7 @@
                 <button id="instructions-btn" class="instruction_button">
                     Инструкция
                 </button>
-                <a href="/ratings.html" class="instruction_button">
+                <a href="ratings.html" class="instruction_button">
                     Рейтинг игроков
                 </a>
                 <button class="instruction_button login-vk-button hide" onclick="VK.Auth.login(login_callback)">
