--- a/arifmetika/ratings.html
+++ b/arifmetika/ratings.html
@@ -37,7 +37,7 @@
         get_games()
     </script>
     <div class="header">
-        <a href="/" class="go-back">
+        <a href="/nikolaymagarin.github.io/arifmetika/" class="go-back">
             <img src="static/images/home-icon-white.png" height="30px" alt=""/>
         </a>
         <div class="profile-info">
