--- a/index.html
+++ b/index.html
@@ -13,6 +13,33 @@
             <div class='col-12 my-5 text-center'>
                 <h1>Projects</h1>
             </div>
+
+            <div class="col-12 col-md-6 mb-5 mb-md-0">
+                <div class="card text-center">
+                  <div class="card-body">
+                    <h5 class="card-title">Chomp</h5>
+                    <p class="card-text">Chomp is a two-player strategy game played on a chocolate bar. The players take it in turns to choose one block and "eat it", together with those that are above it and to its right. The bottom left block is "poisoned" and the player who eats this loses.</p>
+                    <a href="Gravity tic-tac-toe/" class="btn btn-primary">Chomp!</a>
+                  </div>
+                  <div class="card-footer text-muted">
+                    23.03.2020
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 mb-5 mb-md-0">
+                <div class="card text-center">
+                  <div class="card-body">
+                    <h5 class="card-title">Gravity Tic-Tac-Toe</h5>
+                    <p class="card-text">A popular game now with gravity. This is a two-player game.</p>
+                    <a href="Gravity tic-tac-toe/" class="btn btn-primary">Try new tic-tac-toe</a>
+                  </div>
+                  <div class="card-footer text-muted">
+                    01.02.2020
+                  </div>
+                </div>
+            </div>
+
             <div class="col-12 col-md-6 mb-5 mb-md-0">
                 <div class="card text-center">
                   <div class="card-body">
@@ -25,6 +52,7 @@
                   </div>
                 </div>
             </div>
+
             <div class="col-12 col-md-6">
                 <div class="card text-center">
                   <div class="card-body">
@@ -37,6 +65,7 @@
                   </div>
                 </div>
             </div>
+
         </div>
     </div>
 </body>
