--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   <div class="card-body">
                     <h5 class="card-title">Chomp</h5>
                     <p class="card-text">Chomp is a two-player strategy game played on a chocolate bar. The players take it in turns to choose one block and "eat it", together with those that are above it and to its right. The bottom left block is "poisoned" and the player who eats this loses.</p>
-                    <a href="Gravity tic-tac-toe/" class="btn btn-primary">Chomp!</a>
+                    <a href="Chomp/" class="btn btn-primary">Chomp!</a>
                   </div>
                   <div class="card-footer text-muted">
                     23.03.2020
