--- a/Ball_In_Box/index.html
+++ b/Ball_In_Box/index.html
@@ -15,6 +15,6 @@
 </head>
 <body>
 	<canvas width="500" height="500"></canvas>
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js?_=1139"></script>
 </body>
 </html>
