--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <div class="col-12 col-md-6 mb-5 mb-md-0">
                 <div class="card text-center">
                   <div class="card-body">
+                    <h5 class="card-title">PolySpace</h5>
+                    <p class="card-text">My own game in which you can see a little polygonal space. Destroy asteroids and don't let them destroy you! Track your fuel consumption!</p>
+                    <a href="PolySpace/" class="btn btn-primary">Try</a>
+                  </div>
+                  <div class="card-footer text-muted">
+                    25.10.2020
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 mb-5 mb-md-0">
+                <div class="card text-center">
+                  <div class="card-body">
                     <h5 class="card-title">Chomp</h5>
                     <p class="card-text">Chomp is a two-player strategy game played on a chocolate bar. The players take it in turns to choose one block and "eat it", together with those that are above it and to its right. The bottom left block is "poisoned" and the player who eats this loses.</p>
                     <a href="Chomp/" class="btn btn-primary">Chomp!</a>
