--- a/index.html
+++ b/index.html
@@ -79,6 +79,19 @@
                 </div>
             </div>
 
+            <div class="col-12 col-md-6">
+                <div class="card text-center">
+                  <div class="card-body">
+                    <h5 class="card-title">School project</h5>
+                    <p class="card-text">A simple game platformer.</p>
+                    <a href="/platformer" class="btn btn-primary">Start game</a>
+                  </div>
+                  <div class="card-footer text-muted">
+                    10.01.2021
+                  </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
