adding a logic circuit constructor

--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <div class="col-12 col-md-6 mb-5 mb-md-0">
                 <div class="card text-center">
                   <div class="card-body">
+                    <h5 class="card-title">Logic gate constructor</h5>
+                    <p class="card-text">It's actually fun to build logic circuits! Try to build a super-computing machine like your computer!</p>
+                    <a href="Logic_gate_Constructor/" class="btn btn-primary">Build a computer</a>
+                  </div>
+                  <div class="card-footer text-muted">
+                    01.04.2021
+                  </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 mb-5 mb-md-0">
+                <div class="card text-center">
+                  <div class="card-body">
                     <h5 class="card-title">PolySpace</h5>
                     <p class="card-text">My own game in which you can see a little polygonal space. Destroy asteroids and don't let them destroy you! Track your fuel consumption!</p>
                     <a href="PolySpace/" class="btn btn-primary">Try</a>
